HUE-6807 [frontend] Fix global datepicker z-index
(cherry picked from commit 6c3a3b23858e357b9700ea8b1ceb4d799cd062d8)

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -473,3 +473,7 @@ ul.errorlist {
 .nicescroll-rails {
   display: none;
 }
+
+.datepicker {
+  z-index: 1051;
+}
